--- a/sass/partials/_pace.scss
+++ b/sass/partials/_pace.scss
@@ -2,7 +2,7 @@
 	overflow: hidden;
 }
 
-.pace-running .wrap{
+.wrap{
 	opacity: 0
 }
 
